# plamo-gui

./: .gitignore  AGENTS.md  TODO.md  bun.lockb  lefthook.yml  package.json  spec.md
.github/workflows/: ci.yml  release.yml
docs/: plamo-translate.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: HeaderTabs.tsx  LangSelector.tsx  SettingsDialog.tsx  ShortcutHint.tsx
src/components/ui/: button.tsx  progress.tsx  select.tsx  textarea.tsx  toast.tsx
